--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -2,13 +2,17 @@ import { Bleed } from 'nextra/components'
 
 # Introduction
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator.
+**Wordix** is a tool that allows you to fastest generate a AI applications.
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically
-generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links),
-file-system based routing, built-in syntax highlighting, image optimization,
-custom layouts, i18n, and all the features you love about Next.js.
+Wordix is an open-source platform for building AI applications. We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
+The ability to provide a knowledge base and customize application development will be available soon.
 
-Here's what you will get in 1 minute:
+Our platform integrates:
 
-<Bleed>![Nextra Example](/demo.png)</Bleed>
+- Notion-style WYSIWYG editor with AI-powered
+- Text Generation, Image Generation, Audio Generation
+- Tool include Loop, If-Else, Code Execution, etc.
+- AI Document Flow
+- Support debugging and deployment
+
+<Bleed>![wordix introduction](/introduction.png)</Bleed>
