--- a/src/content/autocompletions.mdx
+++ b/src/content/autocompletions.mdx
@@ -1,1 +1,15 @@
+import { Bleed } from 'nextra/components'
+
 # AI Powered
+
+### Autocompletions
+
+When you enable autocompletion, the system uses a segment of the text you've already written to generate suggestions.
+
+To trigger autocompletion, simply press the Tab key while writing. Press Tab again to accept the suggested completion.
+
+
+
+### Text edit
+
+<Bleed>![wordix text edit](/text-edit.png)</Bleed>
