--- a/src/content/generation-prompt.mdx
+++ b/src/content/generation-prompt.mdx
@@ -1,1 +1,7 @@
+import { Bleed } from 'nextra/components'
+
 # Generation Prompt
+
+Deep thinking, and generate a prompt for the AI to generate a website.
+
+<Bleed>![wordix generation prompt](/generation-prompt.png)</Bleed>
