--- a/src/content/mention.mdx
+++ b/src/content/mention.mdx
@@ -2,4 +2,4 @@ import { Bleed } from 'nextra/components'
 
 # Mention
 
-<Bleed>![wordix mention](/mention.png)</Bleed>
+<Bleed>![wordix mention](/mention01.png)</Bleed>
