--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -4,7 +4,7 @@ import { Bleed } from 'nextra/components'
 
 **Wordix** is a tool that allows you to fastest generate a AI applications.
 
-Wordix is an open-source platform for building AI applications. We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
+We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
 The ability to provide a knowledge base and customize application development will be available soon.
 
 Our platform integrates:
@@ -14,5 +14,8 @@ Our platform integrates:
 - Tool include Loop, If-Else, Code Execution, etc.
 - AI Document Flow
 - Support debugging and deployment
+- API access
+- Self-hosting
+- Possess an exclusive application
 
 <Bleed>![wordix introduction](/introduction.png)</Bleed>
