--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -7,7 +7,8 @@ import { Bleed } from 'nextra/components'
 We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
 The ability to provide a knowledge base and customize application development will be available soon.
 
-Our platform integrates:
+
+## Features
 
 - Notion-style WYSIWYG editor with AI-powered
 - Text Generation, Image Generation, Audio Generation
