--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -5,7 +5,7 @@ import { Bleed } from 'nextra/components'
 **Wordix** is a tool that allows you to fastest generate a AI applications.
 
 We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
-The ability to provide a knowledge base and customize application development will be available soon.
+The ability to provide a knowledge base and application development engine will be available soon.
 
 
 ## Features
