--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -2,7 +2,7 @@ import { Bleed } from 'nextra/components'
 
 # Introduction
 
-**Wordix** is a tool that allows you to fastest generate a AI applications.
+**Wordix** is a tool that allows you to fastest generate a AI applications by executing document workflows.
 
 We streamline the development of generative AI solutions by executing document flow to produce results, making it accessible for both developers and non-technical innovators. 
 The ability to provide a knowledge base and application development engine will be available soon.
